# attrdict

./: README.md  pyproject.toml
src/AttrDict_Slim/: dict.py
