[project]
name = "AttrDict_Slim"
version = "0.0.1"
authors = [
  { name="Slim", email="saleemkheralden@gmail.com" },
]
description = "A small package for dict with keys as attributes"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = ""
Issues = ""